# ChangeLog for app-text/sgml-common
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/sgml-common/ChangeLog,v 1.42 2006/11/03 02:57:31 leonardop Exp $

  03 Nov 2006; Leonardo Boshell <leonardop@gentoo.org>
  sgml-common-0.6.3-r5.ebuild:
  Make sure autoconf 2.1* is required (bug #153846).

  30 Oct 2006; Peter Volkov <pva@gentoo.org> sgml-common-0.6.3-r4.ebuild,
  sgml-common-0.6.3-r5.ebuild:
  Depend on autoools eclass in stable version. Raised automake depend version
  to 1.5. Removed automake from DEPEND as autotools eclass takes care about
  this. Fixed bug #148273. Thank Ross and many others for report.

  24 Oct 2006; Roy Marples <uberlord@gentoo.org>
  sgml-common-0.6.3-r5.ebuild:
  Added ~sparc-fbsd keyword.

  07 Oct 2006; Alexandre Buisse <nattfodd@gentoo.org>
  sgml-common-0.6.3-r5.ebuild:
  Force automake-1.4 (bug #148273) by setting WANT_AUTOMAKE at the right
  place.

  09 May 2006; Leonardo Boshell <leonardop@gentoo.org>
  sgml-common-0.6.3-r5.ebuild:
  Set WANT_AUTOMAKE.

  27 Apr 2006; Marien Zwart <marienz@gentoo.org> Manifest:
  Fixing SHA256 digest, pass four

  25 Apr 2006; Fabian Groffen <grobian@gentoo.org>
  sgml-common-0.6.3-r5.ebuild:
  Removed ~ppc-macos as it doesn't eautoreconf (bug #131248)

  05 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  files/sgml-common-0.6.3-install-catalog.in, sgml-common-0.6.3-r5.ebuild:
  Change the installer script to use /bin/bash instead of /bin/sh as it uses
  bash-specific syntax, and mark ~x86-fbsd.

  26 Mar 2006; Alexandre Buisse <nattfodd@gentoo.org>
  sgml-common-0.6.3-r5.ebuild:
  Suppress a \n in KEYWORDS :/

*sgml-common-0.6.3-r5 (26 Mar 2006)

  26 Mar 2006; Alexandre Buisse <nattfodd@gentoo.org>
  +files/sgml-common-0.6.3-configure.in.patch,
  +files/sgml-common-0.6.3-install-catalog.in,
  -files/sgml-common-0.6.3-r4-install-catalog.in,
  sgml-common-0.6.3-r4.ebuild, +sgml-common-0.6.3-r5.ebuild: