@@ -1,6 +1,10 @@
 # ChangeLog for app-text/sgml-common
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/sgml-common/ChangeLog,v 1.42 2006/11/03 02:57:31 leonardop Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/sgml-common/ChangeLog,v 1.43 2006/11/14 10:22:13 leonardop Exp $
+
+  14 Nov 2006; Leonardo Boshell <leonardop@gentoo.org>
+  sgml-common-0.6.3-r4.ebuild, sgml-common-0.6.3-r5.ebuild:
+  Add WANT_AUTOCONF declaration to -r4 as well (bug #153846).
 
   03 Nov 2006; Leonardo Boshell <leonardop@gentoo.org>
   sgml-common-0.6.3-r5.ebuild:
